# BTP2-dma_test

./: CMakeLists.txt  dma_pico.overlay  main_m2m.c  prj.conf
src/: main.c
